# rag-document-parser

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-17-evidence-unit-agentic-chunking.md  2026-06-17-parser-backends.md  2026-06-17-pdf-extract-quality.md  2026-06-18-evidence-unit-extraction-layout.md  2026-06-26-html-backend.md
docs/superpowers/specs/: 2026-06-17-evidence-unit-agentic-chunking-design.md  2026-06-26-html-backend-design.md
scripts/: scan_hwp5_clic_minio.py  scan_hwpx_clic_minio_size_samples.py  validate_hwp5_clic_minio.py  validate_hwpx_clic_minio.py  validate_pdf_clic_size_samples.py
src/rag_document_parser/: __init__.py  backends.py  evidence_html.py  hwpx.py  llm.py  models.py  parser.py  storage.py
src/rag_document_parser/chunk/: __init__.py  agentic.py  backend.py  enrichment.py  llm.py
src/rag_document_parser/enrichment/: __init__.py  backend.py  chunk.py
src/rag_document_parser/evidence_unit_extraction/: assets.py  backend.py  registry.py
tests/: test_agentic_chunker.py  test_enrichment.py  test_evidence_html.py  test_evidence_unit_schema.py  test_html_backend.py  test_hwp5_backend.py  test_hwp5_size_sample_fixtures.py  test_hwpx_backend.py  test_hwpx_size_sample_corpus.py  test_llm.py  test_models.py  test_parser.py  test_pdf_backend.py  test_pdf_size_validation_corpus.py  test_pipeline_layout.py  test_regression_corpus.py  test_scan_hwp5_clic_minio.py  test_scan_hwpx_clic_minio_size_samples.py  test_storage.py  test_validate_hwp5_clic_minio.py  test_validate_hwpx_clic_minio.py
(+76 files in other folders)
