[project]
name = "rag-document-parser"
version = "0.1.0"
description = "RAG-ready document parser with chunks, evidence, and source pointers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_document_parser"]
