[project]
name = "rag-document-parser"
version = "0.6.0"
description = "RAG-ready document parser with source evidence and LLM-enriched chunks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.12",
    "pydantic>=2",
]

[project.optional-dependencies]
hwp5 = ["olefile>=0.47"]
pdf = [
    "pdfplumber>=0.11",
    "pypdf>=4.0",
    "Pillow>=10.0",
    "pymupdf>=1.23",
]
pdf-ocr = [
    "pdfplumber>=0.11",
    "pypdf>=4.0",
    "Pillow>=10.0",
    "pymupdf>=1.23",
    "pytesseract>=0.3",
    "pdf2image>=1.17",
]
dev = [
    "pytest>=8",
    "olefile>=0.47",
    "pdfplumber>=0.11",
    "pypdf>=4.0",
    "Pillow>=10.0",
    "pymupdf>=1.23",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_document_parser"]
